chore: Allow Sonar anaylsis